# crypto-ai-decision-system

./: .env.example  .gitignore  Dockerfile  Optimized Model Report.md  README.md  README_DEPLOYMENT.md  WARP.md  audit_check.py  debug_cvxpy.py  debug_output.txt  debug_sim.py  debug_strategy.py  diagnostic_report.md  docker-compose.yml  final_audit.py  fix_patch.diff  generate_plot.py  main.log.old  meta_model_test.pkl  metrics_report.json  next_model_promote_recommendation.txt  pilot_phase_1_results.md  project_summary.md  pytest.ini  requirements.txt  root_cause.txt  run_bot.sh  run_shock_test_v7.py  run_v7_audit.py  schedule_retraining.sh  short_playbook.md  simulate_live_trading.py  stress_log.txt  stress_log_2.txt  stress_log_3.txt  test_alpha_upgrade.py  test_live_engine.py  test_plot.py  test_risk_hardening.py  train_hybrid_v4.py  (+16 more)
.checkpoints_news/: rss.json
config/: config.yaml  secrets_loader.py  v25_config.yaml
data/: fills.csv
deploy/: colo_config.yaml  fix_direct_routing.py
deployment/: run_bot.sh  systemd_service.conf
docs/: HYBRID_UPGRADE_V4.md  assumptions.md  feature_justification.md  jane_street_architecture.md  mathematical_foundations.md  research_paper_v39.md  risk_methodology.md  v41_readme.md  whitepaper_v1.md  whitepaper_v38.md
models/: ensemble_model.pkl  regime_model.pkl
notebooks/: Visual_Report.ipynb  v41_demo.ipynb  v42_meta_training.ipynb
platform/: docker-compose.yml
reports/: Cost_Aware_Strategy_Audit_Report.md  End_to_End_System_Audit_v3.md  (+51 more)
rust_engine/: Cargo.toml
rust_engine/src/: executor_v2.rs  lib.rs  nanotick.rs
(+1348 files in other folders)
