[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
polars = { version = "0.36", features = ["lazy", "temporal", "dtype-datetime", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
